--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "mysql2": "^3.3.4"
   }
 }
